# Bioinformatics

./: README.md  pyproject.toml
Colab_Intro/: ejemplo_0.ipynb  ejemplo_1.ipynb
Colab_Intro/datos/: data.xlsx  datos-ejemplo.csv  sequenceSOD.fasta
