[tool.poetry]
name = "bioinformatics"
version = "0.0.0"
description = "Learning programming, basic tools and math related bioinformatics"
authors = ["fitolobo <rodolfolobo@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
scipy = "^1.12.0"
matplotlib = "^3.8.2"
plotly = "5.18.0"
python-dotenv = "^1.0.1"
python-sql = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
